--- a/new index/index.html
+++ b/new index/index.html
@@ -1,15 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Don't Be Evil</title>
+<title>Garrett Canepa Portfolio</title>
 </head>
 <body>
 
-<div class="container-fluid">
-<h1>Innocent Beginnings</h1>
-<img src="DontBeEvil.jpg" alt="google">
-</a>
-</body>
+<!-- everything on this page is in a fluid container-->
+
+<!-- this is where your page code starts -->
+<h1 class="text-center">Garrett Canepa</h1>
+<!-- I first tried putting this in a jumbotron, but did not like it-->
+
+<nav class="navbar navbar-expand-sm bg-light navbar-light">
+<!-- the navbar is a list of links and is styled above, you can add your own styles too-->
+<ul class="navbar-nav">
+<li class="nav-item">
+<!-- all of the projects are named and pages are named, once you like this copy it-->
+<a class="nav-link" href="project-1.html">glitch</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="project-2.html">meme mashup</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="project-3.html">game</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="project-4.html">3D print</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="project-5.html">net art</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="project-6.html">portfolio</a>
+</li>
+</ul>
+</nav>
+	
 </html>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
