--- a/glitch.html
+++ b/glitch.html
@@ -45,6 +45,7 @@
 </ul>
 </nav>
 	<br>
-	
-</body>
+<img src="images/this-is-always-home-to-me_orig.jpg" alt="home" width="500" class="float-left"> 
+<img src="images/not-my-home_orig.png" alt="not home" width="500" class="float-right">
+	</body>
 </html>
