tried to adjust imgae spacing and caused issues with "special characters?" nothing resolved

--- a/glitch.html
+++ b/glitch.html
@@ -45,7 +45,9 @@
 </ul>
 </nav>
 	<br>
-<img src="images/this-is-always-home-to-me_orig.jpg" alt="home" width="500" class="float-left"> 
-<img src="images/not-my-home_orig.png" alt="not home" width="500" class="float-right">
+<img src="images/this-is-always-home-to-me_orig.jpg" alt="home" width="500" class="mx-auto" "float-left"> 
+<img src="images/not-my-home_orig.png" alt="not home" width="500" class="mx-auto" "float-right">
+	<br>
 	</body>
+	
 </html>
