--- a/glitch.html
+++ b/glitch.html
@@ -30,7 +30,7 @@
 <a class="nav-link" href="glitch.html">glitch</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="meme.html">meme mashup</a>
+<a class="nav-link" href="meme.html">meme</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="minecraft.html">minecraft</a>
