MC pics and played with spacing

--- a/meme.html
+++ b/meme.html
@@ -45,8 +45,8 @@
 </ul>
 </nav>
 	<br>
-<img src="images/mashup-meme_orig.png" alt="home" width="500" class="float-left"> 
-<img src="images/feeding-the-homeless_orig.jpg" alt="not home" width="500" class="float-right">
+<img src="images/mashup-meme_orig.png" alt="jon" width="500" class="float-left"> 
+<img src="images/feeding-the-homeless_orig.jpg" alt="dog" width="500" class="float-right">
 	<br>
 	<br>
 	<br>
