--- a/minecraft.html
+++ b/minecraft.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<h1 class="text-center">Memes</h1>
+	<h1 class="text-center">Minecraft</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
 <!-- the navbar is a list of links and is styled above, you can add your own styles too-->
 <ul class="navbar-nav">
