added descriptive text to MC

--- a/minecraft.html
+++ b/minecraft.html
@@ -45,23 +45,11 @@
 </ul>
 </nav>
 	<br>
-<img src="images/mashup-meme_orig.png" alt="home" width="500" class="float-left"> 
-<img src="images/feeding-the-homeless_orig.jpg" alt="not home" width="500" class="float-right">
+<img src="images/MC project 1.png" alt="mc1" width="500" class="float-left"> 
+<img src="images/MC project 2.png" alt="mc2" width="500" class="float-right">
+<img src="images/MC project 3.png" alt="mc3" width="500" class="me-auto d-block">
 	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-<p class="text-left"> (left) JonTron uses the circle of death while Sora takes a selfie. 
-In the newest kingdom hearts game, there is a feature where Sora can take a selfie with characters in the game. I figured it would be pretty funny to add something pretty unexpected and shocking to such a pleasant face and calm scenario for Sora. The background image is a favorite screenshot among JonTron fans in which Jon pretends to hang himself as a joke on something similar happening in a game he's playing.</p>
-	<p class="text-left"> (right) Collaborative effort of Garrett Canepa, Aleisha La Roque, Savannah Singh, and Ashley Rose to mash up Dogs and Food in Photoshop</p>
+<p class="text-left"> For my project I chose to recreate the in-game sprite of Link from the GameBoy title, "The Legend of Zelda Link's Awakening". I also chose to give it some more dimension, making the brightest areas the parts that stuck out most and the darkest parts the most recessed to make the color distinctions visible when it's eventually printed. This sprite is of cultural significance to me because it was the first Zelda game I played without my dad's help as a child. I spent hours and hours playing this game as a kid and it helped deepen my love for the series. It was also recently announced that Nintendo was in the process of remaking this game for the Switch, so Link's Awakening is about to become very relevant again in the mainstream culture.</p>
 </body>
 	
 </html>
