--- a/index.html
+++ b/index.html
@@ -48,5 +48,21 @@
 
 </ul>
 </nav>
+<br>
+<img src="images/hiro-low-detail_orig.png" alt="loser" width="500" class="mx-auto d-block"> 
+<br>
+<p> I'm Garrett Canepa.
+<br>
+I am a Graphic Design student at San Jose State University. In my classes, I work in many mediums including posters, icons, logos, brochures, and pamphlets.
+<br>
+Outside of my classes, I also work with twitch emotes, profile pictures, social media banners, as well as Illustrations and designs more broadly. I also often like to experiment in other creative and artistic mediums.
+ (Please contact me if you would like something drawn or designed.)
+ <br>
+I am a Free Speech Warrior and a Liberty Activist. I am also the proud president of the San Jose State chapter of Young Americans For Liberty.
+As an artist, I feel like It is important to protect your right to express yourself   and speak your mind, even if I completely disagree with your message or philosophy. In this, I hope that you will want to protect MY right to do the same so I can continue to create art and express myself.
+<br>
+<br>
+	To get a hold of me, please email me at garrett.canepa@sjsu.edu
+</p>
 	</body>	
 </html>
