added 3d print project description

--- a/3Dprint.html
+++ b/3Dprint.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Minecraft</title>
+<title>3D Print</title>
 	<!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-	<h1 class="text-center">Minecraft</h1>
+	<h1 class="text-center">3D Print</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
 <!-- the navbar is a list of links and is styled above, you can add your own styles too-->
 <ul class="navbar-nav">
@@ -45,11 +45,9 @@
 </ul>
 </nav>
 	<br>
-<img src="images/MC project 1.png" alt="mc1" width="500" class="float-left"> 
-<img src="images/MC project 2.png" alt="mc2" width="500" class="float-right">
-<img src="images/MC project 3.png" alt="mc3" width="500" class="me-auto d-block">
+<img src="images/minecraft-3d_orig.png" alt="link" width="500" class="mx-auto d-block"> 
 	<br>
-<p class="text-left"> For my project I chose to recreate the in-game sprite of Link from the GameBoy title, "The Legend of Zelda Link's Awakening". I also chose to give it some more dimension, making the brightest areas the parts that stuck out most and the darkest parts the most recessed to make the color distinctions visible when it's eventually printed. This sprite is of cultural significance to me because it was the first Zelda game I played without my dad's help as a child. I spent hours and hours playing this game as a kid and it helped deepen my love for the series. It was also recently announced that Nintendo was in the process of remaking this game for the Switch, so Link's Awakening is about to become very relevant again in the mainstream culture.</p>
+<p class="text-left"> The object of cultural significance I chose was a 3D interpretation of Link's sprite from The Legend of Zelda Link's Awakening. This was a favorite game of mine as a kid and with the announcement of a remake coming to switch sometime in the near future, I wanted to celebrate. </p>
 </body>
 	
 </html>
