made all pages fluid containers ( already looks a bit better)

--- a/3Dprint.html
+++ b/3Dprint.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
-
+<div class="container-fluid">
 <body>
 	<h1 class="text-center">3D Print</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -49,5 +49,5 @@
 	<br>
 <p class="text-left"> The object of cultural significance I chose was a 3D interpretation of Link's sprite from The Legend of Zelda Link's Awakening. This was a favorite game of mine as a kid and with the announcement of a remake coming to switch sometime in the near future, I wanted to celebrate. </p>
 </body>
-	
+</div>	
 </html>
