--- a/glitch.html
+++ b/glitch.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
-
+<div class="container-fluid">
 <body>
 	<h1 class="text-center">Glitch Art</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -61,5 +61,5 @@
 	<br>
 	      <p class="text-left"> For this project I wanted to take some images of the two major cities I've lived in through my life and try to communicate my attitudes toward them. These two cities being Monterey and San Jose. I've always felt isolated and very alone living in San Jose. I feel like the people here don't share my values and have a reluctance to interact with me. Living in this modern, busy city makes me feel unwelcome and paranoid. I miss living with my family and the old town laissez faire attitude of monterey. In the first picture, though it has been altered (text editor), the city and landscape of Monterey are still clear and visible. The colors are also traditionally calm and pleasant colors. Whereas the second picture has been heavily distorted (audacity), with lots of noise and chaotic colors . To me this highlights how different each city is and my mindset for each one. While most people might look at the second picture and see beautiful colors and excitement, to me it represents the chaos and stress of living in a big city. I would personally enjoy the calmer and more beautiful landscape of the first picture a lot more despite how less colorful or "exciting" it is.</p>
 </body>
-	
+</div>
 </html>
