--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
+<div class="container-fluid">
 <body>
 
 <!-- everything on this page is in a fluid container-->
@@ -65,4 +66,5 @@ As an artist, I feel like It is important to protect your right to express yours
 	To get a hold of me, please email me at garrett.canepa@sjsu.edu
 </p>
 	</body>	
+	</div>
 </html>
