--- a/minecraft.html
+++ b/minecraft.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
-
+<div class="container-fluid">
 <body>
 	<h1 class="text-center">Minecraft</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -51,6 +51,6 @@
 	<br>
 <p class="text-left"> For my project I chose to recreate the in-game sprite of Link from the GameBoy title, "The Legend of Zelda Link's Awakening". I also chose to give it some more dimension, making the brightest areas the parts that stuck out most and the darkest parts the most recessed to make the color distinctions visible when it's eventually printed. This sprite is of cultural significance to me because it was the first Zelda game I played without my dad's help as a child. I spent hours and hours playing this game as a kid and it helped deepen my love for the series. It was also recently announced that Nintendo was in the process of remaking this game for the Switch, so Link's Awakening is about to become very relevant again in the mainstream culture.</p>
 </body>
-	
+</div>
 </html>
 
