--- a/netart.html
+++ b/netart.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
-
+<div class="container-fluid">
 <body>
 	<h1 class="text-center">Net Art</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -50,5 +50,5 @@
 	<p class="text-center"><strong>(click the image to go to the site)</strong></p>
 	<p>This Is a criticism of Google in their attempt to censor various viewpoints across the internet, and their attempt to build a new campus in San Jose.</p>
 </body>
-	
+</div>
 </html>
