--- a/meme.html
+++ b/meme.html
@@ -16,7 +16,7 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
 </head>
-
+<div class="container-fluid">
 <body>
 	<h1 class="text-center">Memes</h1>
 	<nav class="navbar navbar-expand-sm bg-light navbar-light">
@@ -60,9 +60,10 @@
 	<br>
 	<br>
 <p class="text-left"> (left) JonTron uses the circle of death while Sora takes a selfie. 
-In the newest kingdom hearts game, there is a feature where Sora can take a selfie with characters in the game. I figured it would be pretty funny to add something pretty unexpected and shocking to such a pleasant face and calm scenario for Sora. The background image is a favorite screenshot among JonTron fans in which Jon pretends to hang himself as a joke on something similar happening in a game he's playing.</p>
+In the newest kingdom hearts game, there is a feature where Sora can take a selfie with characters in the game.</p>
+<p>I figured it would be pretty funny to add something pretty unexpected and shocking to such a pleasant face and calm scenario for Sora. The background image is a favorite screenshot among JonTron fans in which Jon pretends to hang himself as a joke on something similar happening in a game he's playing.</p>
 	<p class="text-left"> (right) Collaborative effort of Garrett Canepa, Aleisha La Roque, Savannah Singh, and Ashley Rose to mash up Dogs and Food in Photoshop</p>
 </body>
-	
+</div>
 </html>
 
