--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
 <li class="nav-item">
 <a class="nav-link" href="netart.html">net art</a>
 </li>
-
 </ul>
 </nav>
 <br>
-<img src="images/hiro-low-detail_orig.png" alt="loser" width="500" class="mx-auto d-block"> 
+<img src="images/hiro-low-detail_orig.png" alt="Loser Hermit" width="500" class="mx-auto d-block"> 
 <br>
 <p> I'm Garrett Canepa.
 <br>
