--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
 <li class="nav-item">
 <a class="nav-link" href="netart.html">net art</a>
 </li>
+<li class="nav-item">
+<a class="nav-link" href="Garrett_Drawing_Tools_final/index.html">drawing tools</a>
+</li>
 </ul>
 </nav>
 <br>
