--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
 <li class="nav-item">
 <a class="nav-link" href="Garrett_Drawing_Tools_final/index.html">drawing tools</a>
 </li>
+<li class="nav-item">
+<a class="nav-link" href="selfportrait.html">self portrait</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="CactusCoinbank.html">cactus</a>
+</li>
 </ul>
 </nav>
 <br>
