Finished cactus page

--- a/CactusCoinbank.html
+++ b/CactusCoinbank.html
@@ -1,4 +1,61 @@
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>Cactus</title>
+	<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+
+</head>
+<div class="container-fluid">
+<body>
+	<h1 class="text-center">Cactus</h1>
+	<nav class="navbar navbar-expand-sm bg-light navbar-light">
+<!-- the navbar is a list of links and is styled above, you can add your own styles too-->
+<ul class="navbar-nav">
+<li class="nav-item">
+<a class="nav-link" href="index.html">home</a>
+</li>
+	<li class="nav-item">
+<!-- all of the projects are named and pages are named, once you like this copy it-->
+<a class="nav-link" href="glitch.html">glitch</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="meme.html">meme mashup</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="minecraft.html">minecraft</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="3Dprint.html">3D print</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="netart.html">net art</a>
+</li>
 <li class="nav-item">
 <a class="nav-link" href="Garrett_Drawing_Tools_final/index.html">drawing tools</a>
 </li>
+<li class="nav-item">
+<a class="nav-link" href="selfportrait.html">self portrait</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="CactusCoinbank.html">cactus</a>
+</li>
 </ul>
+</nav>
+	<br>
+<img src="images/Cactus 1.png" alt="cac1" width="500" class="mx-auto d-block"> 
+	<br>
+<p class="text-left"> The object of cultural significance I chose was a 3D interpretation of Link's sprite from The Legend of Zelda Link's Awakening. This was a favorite game of mine as a kid and with the announcement of a remake coming to switch sometime in the near future, I wanted to celebrate. </p>
+</body>
+</div>	
+</html>
