--- a/CactusCoinbank.html
+++ b/CactusCoinbank.html
@@ -53,9 +53,41 @@
 </ul>
 </nav>
 	<br>
-<img src="images/Cactus 1.png" alt="cac1" width="500" class="mx-auto d-block"> 
+<img src="images/Cactus 1.png" alt="cac1" width="500" class="float-left"> 
+<img src="images/Cactus 2.png" alt="cac2" width="500" class="float-right">
 	<br>
-<p class="text-left"> The object of cultural significance I chose was a 3D interpretation of Link's sprite from The Legend of Zelda Link's Awakening. This was a favorite game of mine as a kid and with the announcement of a remake coming to switch sometime in the near future, I wanted to celebrate. </p>
+	<spacer></spacer>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<p class="text-left"> Artist Statement:</p>
+	<spacer></spacer>
+	<p class="text-left">
+     As someone who is both an artist and a political activist, I get very tired and annoyed of artwork and posters that like to grandstand about how you should live by the artists values or how I need to bend my knee the the wills of progressive or conservative society. I’ve never found virtue signaling particularly attractive and I’ve never found calls to action very persuasive. As someone who seems to find himself working in political topics lately, I feel like I shouldn’t create art with messages like this. While a lot of times I will agree with the messages and meanings behind the works and posters, the thing that grosses me out is how the message is trying to be sold to you like the artist is a sleazy car salesman or like a mom telling you “because I said so”. No, Socially, I’m a Libertarian. That means I don’t get to tell you how to live your life or what you should value. People’s lives are too weird and their experiences are too varied for me to tell them that they’re living their life wrong. If I’m going to create a piece with a political message, It's going to communicate my values in a way that won’t make a judgement on yours. It will only demonstrate my distaste of my own situation or my own discomfort with the way certain things are. In making this cactus coin bank, the message I wanted to get across was that I want to leave. I could make a piece that talked about all the ways I think California sucks and why we need to restructure everything. But why would I want to do that? It’s not even all that true, while I do have a lot of problems with this state, there’s also a lot I like about it. Why would I make something that calls for changing everything about a place that most people who live here like about it? I recognize that my opinions and views are not well appreciated around here, so why do I get to impose my will on the population because I’m uncomfortable? Wouldn’t it be a much more powerful statement to say that this place makes me want to leave and let people
+come to their own decisions about my bad opinions or their own take of why they think this state is driving people to leave? I find that way more interesting. 
+
+	<p class="text-left"> Technical process:</p>
+	<spacer></spacer>
+	<p class="text-left">
+     There were many ways of approaching my cactus coin bank concept that It was a bit overwhelming and intimidating at first. I wasn’t even sure what kind of cactus I wanted to make or what would be the most visually appealing or appropriate design. I also had no idea of how to even go about starting a build for it. But at the very least I knew I would be building it in minecraft and eventually 3D printing it, so that was a start. To try and get the ball rolling I started like I would any project I wasn’t very confident with. I just jumped into a superflat desert and started noodling and experimenting with different builds and shapes and curves to get a feel for how I could achieve the final shape I wanted. After getting comfortable with making curves and cactus shaped objects as well as working out what shape the flower pot would be, I decided to research the various cactus species of Nevada and look to see if there were any minecraft builds of cactuses already out there. In this, I found that I liked the shape of the prickly pear cactus and decided to go for that. I also found that there were very few minecraft cactus builds. So I just went at it constantly changing the shape and angles as I went. Eventually i came up with a design that I really liked, complete with cactus pears and a smaller pad budding off the main one. This looked good but I had forgotten to consider the coin bank element of this build and when I tried to implement this, I realized it was too small. From here I decided to scale the design to twice its size. So I began laying out blocks on the ground next to this initial design to firstly figure out the shape of the cactus when doubled in size, but also to see what areas would need a bit more “fleshing out” in its new dimensions. When finished, I recreated the design to be upright next to the new pot so I could print the two pieces separately. They were going to be a lot bigger after all and would take far longer than I would be able to do in one day if I were to print them together. After finishing the builds I used Mineways to turn the builds into 2 separate models. I started with a test print of the smaller cactus model as a 2 inch miniature, just to make sure I liked the look of it and check its balance. With that in the clear I started the long 7 hour process of 3D printing the pot. After the long 7 hours were up and I had removed the print from the plate (took some work), I went home to remove the scaffolding. The next day I returned to print the actual cactus piece. This was an even longer 9 hour print which made me glad that I had come in earlier than the day before. After the cactus had finished printing i again took it home to remove the scaffolding only to realize that the pieces were still too small to use as a coin bank. So I guess in the end this became more of a proof of concept than anything. Finally I used acrylic paint to try and match the colors in game. After I painted it al I had to do was superglue the cactus piece to the pot and It was finished. I now had a non-functioning cactus coin bank to remind me to save for my move and to look forward to a future life in Nevada. 
+
+<p class="text-left">Conceptual process:</p>
+	<spacer></spacer>
+	<p class="text-left">Conceptual process:
+     For this project I really wanted to create something uniquely important to me. I wanted to make something that would visually speak about an interest or goal or favorite theme of mine. My mind unsurprisingly drifted towards projects about video games as it always does. But that seemed too predictable and so much like many other projects I’ve made In the past. I decided I needed to think further outside the box and think about something more oriented towards a desire or aspiration of mine. In this, my mind drifted towards my recent plans to eventually move to Nevada. That was a topic I haven't done a lot with at all. But why Nevada? And why was that of so much significance to me? Well for the past several years, It’s become more and more apparent that California doesn’t fit me as a person anymore, nor does it share my values. I feel very detached and alone living here within the constantly changing and overly progressive, high-energy atmosphere. That along with the Housing prices and taxes is enough to make someone like me go crazy. I would much prefer to live in a state that accommodates a slower and simpler “laissez-faire” lifestyle. In short, I think I’ve learned I’m not cut out for city life. This was a feeling I wanted to visualize. I could make something to display my desire for a simpler life. I could make a cactus coin bank to represent my goal of saving money to move to Nevada.  </p>
 </body>
 </div>	
 </html>
