added all navbar tabs

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 <a class="nav-link" href="tools.html">drawing tools</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="Self_Portrait/index.html">self portrait</a>
+<a class="nav-link" href="portrait.html">self portrait</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="CactusCoinbank.html">cactus</a>
