--- a/glitch.html
+++ b/glitch.html
@@ -30,7 +30,7 @@
 <a class="nav-link" href="glitch.html">glitch</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="meme.html">meme</a>
+<a class="nav-link" href="meme.html">meme mashup</a>
 </li>
 <li class="nav-item">
 <a class="nav-link" href="minecraft.html">minecraft</a>
@@ -41,7 +41,15 @@
 <li class="nav-item">
 <a class="nav-link" href="netart.html">net art</a>
 </li>
-
+<li class="nav-item">
+<a class="nav-link" href="tools.html">drawing tools</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="portrait.html">self portrait</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="CactusCoinbank.html">cactus</a>
+</li>
 </ul>
 </nav>
 	<br>
